# jenkins4nix

./: LICENSE  README.md  jenkins4nix.cabal
src/: Main.hs
